# sorting-hat

./: .env.example  .gitignore  CLAUDE.md  README.md  docker-compose.prod.yml  docker-compose.yml
.github/workflows/: build-images.yml  deploy.yml
api/: .dockerignore  .env.example  Dockerfile  entrypoint.sh  pyproject.toml
api/alembic/: env.py
api/alembic/versions/: 001_initial_schema.py  002_seed_governance_groups.py  003_seed_taxonomy_nodes.py
api/src/sorting_hat/: config.py  db.py  main.py  seed.py
api/src/sorting_hat/llm/: __init__.py  openai_compat.py  provider.py
api/src/sorting_hat/models/: __init__.py  classification.py  taxonomy.py
api/src/sorting_hat/prompts/: __init__.py  classify.py  summarize.py
api/src/sorting_hat/routes/: __init__.py  classification.py  taxonomy.py
api/src/sorting_hat/schemas/: __init__.py  classification.py  taxonomy.py
api/src/sorting_hat/services/: __init__.py  classifier.py  scraper.py  taxonomy.py
api/tests/: conftest.py  test_classification_routes.py  test_classifier.py  test_health.py  test_llm_provider.py  test_models.py  test_schemas.py  test_scraper.py  test_seed.py  test_taxonomy_routes.py  test_taxonomy_service.py
deploy/supabase/: .env.example  docker-compose.yml
deploy/traefik/: docker-compose.yml  traefik.yml
docs/: code-review-2026-02-13.md  vps-setup.md
docs/plans/: 2026-02-06-deployment-design.md  (+3 more)
research/: Draft v0.2 - Taxonomy Structure.md  Research - Existing IT Taxonomy Landscape.md  Taxonomy Definitions - Complete Reference.md
web/: .env.example  Dockerfile  package-lock.json
(+12 files in other folders)
